Use fixed position for AJAX loader so it's always visible.
git-svn-id: svn+ssh://svn.bmc.uu.se/cbe/openexam-php/trunk@3253 58b8aac4-d633-40de-91bf-eab09b0297ab

--- a/phalcon-mvc/public/css/standard.css
+++ b/phalcon-mvc/public/css/standard.css
@@ -162,7 +162,7 @@ h1.logo {
 }
 
 #ajax-loader {  
-    position:absolute;
+    position:fixed;
     right: 30px;
     top: 80px;
     display: none; 
